# customs

./: Cargo.toml  license.md  readme.md
docs/: glossary.md  typescript_edge_cases.md
src/: analysis.rs  ast_utils.rs  config.rs  dependency_graph.rs  json_config.rs  lib.rs  main.rs  module_visitor.rs  package_json.rs  parsing.rs  reporting.rs  tsconfig.rs
src/tests/: exports.rs  imports.rs  mod.rs  parsing.rs  scoping.rs  usages.rs  utils.rs
test_project/: a.ts  b.ts  index.ts  tsconfig.json
test_project/folder/: c.ts
tests/: ambiguous.ts  computed_path.ts  interface.ts  mixed_exports.ts  path.ts  scope_order.ts  scopes_01.ts  test_exports.ts  vars.ts
tests/dts/: a.d.ts  b.ts
