[package]
name = "customs"
version = "0.1.0"
authors = ["Paavo Huhtala <paavo.huhtala@gmail.com>"]
edition = "2018"
default-run = "customs"

[lib]
name = "customs_analysis"
path = "src/lib.rs"

[[bin]]
name = "customs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.40"
ignore = "0.4.17"
itertools = "0.10.0"
lazy_static = "1.4.0"
rayon = "1.5.1"
regex = "1.5.4"
relative-path = "1.4.0"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"
swc_atoms = "0.2.6"
swc_common = "0.10.20"
swc_ecma_ast = "0.45.0"
swc_ecma_parser = "0.57.2"
swc_ecma_visit = "0.31.0"
