[package]
name = "customs"
version = "0.1.0"
authors = ["Paavo Huhtala <paavo.huhtala@gmail.com>"]
edition = "2021"
default-run = "customs"

[lib]
name = "customs_analysis"
path = "src/lib.rs"

[[bin]]
name = "customs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.45"
ignore = "0.4.18"
itertools = "0.10.1"
lazy_static = "1.4.0"
rayon = "1.5.1"
regex = "1.5.4"
relative-path = "1.5.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
structopt = "0.3.25"
swc_atoms = "0.2.9"
swc_common = "0.14.6"
swc_ecma_ast = "0.58.0"
swc_ecma_parser = "0.78.2"
swc_ecma_visit = "0.44.0"

[dev-dependencies]
pretty_assertions = "1.0.0"
